# test1

./: main.py  pyproject.toml  replit.nix
attached_assets/: Pasted--a-r-Merkezi-Vardiya-Plan-zel-Durum-rnekleri-Callback-ve-randevu-i-in-kriye-Baykal-ve-Cansel--1738864699418.txt  Pasted-2-Amasya-ve-stanbul-lokasyonlar-ayr-ayr-de-erlendirilir-Amasya-ve-stanbul-daki-operasyonel-s-1738868667890.txt  Pasted-Vardiya-plan-nda-al-an-eklenme-veya-i-ten-kma-durumlar-i-in-parametrik-yap-kurulmal-d-r-De-i--1738864690291.txt
models/: employee.py  shift.py
pages/: employee_management.py  shift_planning.py  shift_rules.py  shift_types.py
utils/: advanced_optimizer.py  config.py  shift_optimizer.py  shift_validator.py
