[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.61.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pyodbc>=5.2.0",
    "python-dotenv>=1.0.1",
    "streamlit>=1.42.0",
    "twilio>=9.4.4",
]
